force-app/main/default/objects/QuBy_Detail__c/QuBy_Detail__c.object-meta.xml
<CustomObject>
    <label>All QuBy Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All QuBy Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>