force-app/main/default/objects/QuBy_Detail__c/fields/Advocated_Solution__c.field-meta.xml
<CustomField>
    <fullName>Advocated_Solution__c</fullName>
    <label>Advocated Orders Funnel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>