force-app/main/default/objects/QuBy_Detail__c/fields/Annuity_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Acknowledged_Date__c</fullName>
    <label>Recurring Revenue Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>