force-app/main/default/objects/QuBy_Detail__c/fields/Annuity_Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Modification_Date__c</fullName>
    <label>Recurring Revenue Modification Date</label>
    <type>DateTime</type>
</CustomField>