force-app/main/default/objects/QuBy_Detail__c/fields/Annuity_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Quote_Amount__c</fullName>
    <label>Recurring Revenue Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>