force-app/main/default/objects/QuBy_Detail__c/fields/Annuity_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Quote_Status__c</fullName>
    <label>Recurring Revenue Quote Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>