force-app/main/default/objects/QuBy_Detail__c/fields/Annuity_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Submitted_Date__c</fullName>
    <label>Recurring Revenue Submitted Date</label>
    <type>DateTime</type>
</CustomField>