force-app/main/default/objects/QuBy_Detail__c/fields/Backup_Email__c.field-meta.xml
<CustomField>
    <fullName>Backup_Email__c</fullName>
    <label>Backup Email</label>
    <type>Email</type>
</CustomField>