force-app/main/default/objects/QuBy_Detail__c/fields/Converted_Annuity_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Annuity_Quote_Amount__c</fullName>
    <formula>Annuity_Quote_Amount__c / Currency_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted RecurringRevenue Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>