force-app/main/default/objects/QuBy_Detail__c/fields/Converted_Solution_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Solution_Quote_Amount__c</fullName>
    <formula>Solution_Quote_Amount__c  /  Currency_Conversion_Rate__c</formula>
    <label>Converted Orders Funnel Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>