force-app/main/default/objects/QuBy_Detail__c/fields/Financial_Call_Off__c.field-meta.xml
<CustomField>
    <fullName>Financial_Call_Off__c</fullName>
    <label>Financial Call-Off</label>
    <length>5</length>
    <type>Text</type>
</CustomField>