force-app/main/default/objects/QuBy_Detail__c/fields/Invoice_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Trigger__c</fullName>
    <label>Invoice Trigger</label>
    <length>100</length>
    <type>Text</type>
</CustomField>