force-app/main/default/objects/QuBy_Detail__c/fields/isChannel__c.field-meta.xml
<CustomField>
    <fullName>isChannel__c</fullName>
    <label>isChannel</label>
    <length>5</length>
    <type>Text</type>
</CustomField>