force-app/main/default/objects/QuBy_Detail__c/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <label>Latest Version</label>
    <length>3</length>
    <type>Text</type>
</CustomField>