force-app/main/default/objects/QuBy_Detail__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>