force-app/main/default/objects/QuBy_Detail__c/fields/Offer_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Offer_Portfolio__c</fullName>
    <label>Offer Portfolio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>