force-app/main/default/objects/QuBy_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>All QuBy Quotes</relationshipLabel>
    <relationshipName>All_QuBy_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>