force-app/main/default/objects/QuBy_Detail__c/fields/Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_No__c</fullName>
    <description>This will be supporting process for real time failures</description>
    <label>Opportunity No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>