force-app/main/default/objects/QuBy_Detail__c/fields/ORDER_DELAY_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>ORDER_DELAY_COMMENT__c</fullName>
    <label>ORDER DELAY COMMENT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>