force-app/main/default/objects/QuBy_Detail__c/fields/Order_Not_Booked_Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Not_Booked_Pending_Reason__c</fullName>
    <label>Order Not Booked Pending Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENT MISSING</fullName>
            </value>
            <value>
                <fullName>INCORRECT ADDRESS</fullName>
            </value>
            <value>
                <fullName>INCORRECT ORDER TYPE</fullName>
            </value>
            <value>
                <fullName>INCORRECT PRICING</fullName>
            </value>
            <value>
                <fullName>INCORRECT PPM/WARRENTY PID SETUP</fullName>
            </value>
            <value>
                <fullName>INCORRECT TRIGGER TYPE</fullName>
            </value>
            <value>
                <fullName>MISSING APPROVALS</fullName>
            </value>
            <value>
                <fullName>ROLLOUT MISSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>