force-app/main/default/objects/QuBy_Detail__c/fields/Order_Not_Booked_Reason_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Not_Booked_Reason_Status__c</fullName>
    <label>Order Not Booked Reason Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Config Error</fullName>
            </value>
            <value>
                <fullName>DUPLICATE QUOTE</fullName>
            </value>
            <value>
                <fullName>IMPORT ISSUE</fullName>
            </value>
            <value>
                <fullName>INCORRECT SUBMISSION</fullName>
            </value>
            <value>
                <fullName>LACK OF INFORMATION</fullName>
            </value>
            <value>
                <fullName>PROCESSED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>ACKNOWLEDGED STILL SHOWING OPEN</fullName>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SALESPERSON NAME MISSING UNABLE TO PROCEED</fullName>
            </value>
            <value>
                <fullName>CUSTOMER CREDIT HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>