force-app/main/default/objects/QuBy_Detail__c/fields/Organization_Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Organization_Action_Owner__c</fullName>
    <label>Organization Action Owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>PRODUCT MANAGER</fullName>
            </value>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>SALES SUPPORT</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>