force-app/main/default/objects/QuBy_Detail__c/fields/PS_Products__c.field-meta.xml
<CustomField>
    <fullName>PS_Products__c</fullName>
    <label>PS Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>