force-app/main/default/objects/QuBy_Detail__c/fields/QuickLook_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickLook_ID__c</fullName>
    <label>Assigned Salesperson QILD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>