force-app/main/default/objects/QuBy_Detail__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <externalId>true</externalId>
    <label>Quote Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>