force-app/main/default/objects/QuBy_Detail__c/fields/Re_Engineering_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Engineering_Trigger_Date__c</fullName>
    <label>Re-Engineering Trigger Date</label>
    <type>DateTime</type>
</CustomField>