force-app/main/default/objects/QuBy_Detail__c/fields/Recipients_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipients_Email__c</fullName>
    <label>Recipients Email</label>
    <type>Email</type>
</CustomField>