force-app/main/default/objects/QuBy_Detail__c/fields/Reengineering_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reengineering_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reengineering Opportunity</label>
    <type>Checkbox</type>
</CustomField>