force-app/main/default/objects/QuBy_Detail__c/fields/Return_Comment__c.field-meta.xml
<CustomField>
    <fullName>Return_Comment__c</fullName>
    <label>Return Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>