force-app/main/default/objects/QuBy_Detail__c/fields/Rollout_Date__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Date__c</fullName>
    <label>Rollout Date</label>
    <type>DateTime</type>
</CustomField>