force-app/main/default/objects/QuBy_Detail__c/fields/Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Code__c</fullName>
    <label>Sales Org Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>