force-app/main/default/objects/QuBy_Detail__c/fields/Services_Products__c.field-meta.xml
<CustomField>
    <fullName>Services_Products__c</fullName>
    <label>Services Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>