force-app/main/default/objects/QuBy_Detail__c/fields/Solution_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Acknowledged_Date__c</fullName>
    <label>Orders Funnel  Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>