force-app/main/default/objects/QuBy_Detail__c/fields/Solution_Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Modification_Date__c</fullName>
    <label>Orders Funnel Modification Date</label>
    <type>DateTime</type>
</CustomField>