force-app/main/default/objects/QuBy_Detail__c/fields/Solution_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Solution_Quote_Amount__c</fullName>
    <label>Orders Funnel  Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>