force-app/main/default/objects/QuBy_Detail__c/fields/Solution_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Solution_Quote_Status__c</fullName>
    <label>Orders Funnel Quote Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>