force-app/main/default/objects/QuBy_Detail__c/fields/Total_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Amount__c</fullName>
    <description>This field is use to add both solution and annuity quote amount.
This field is used in Opportunity Re engineering.</description>
    <formula>Annuity_Quote_Amount__c + Solution_Quote_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>