force-app/main/default/objects/QuBy_Detail__c/fields/X24_hour_Notification__c.field-meta.xml
<CustomField>
    <fullName>X24_hour_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 hour Notification</label>
    <type>Checkbox</type>
</CustomField>