force-app/main/default/objects/QuBy_Detail__c/fields/X48_hour_Notification__c.field-meta.xml
<CustomField>
    <fullName>X48_hour_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>48 hour Notification</label>
    <type>Checkbox</type>
</CustomField>